Recipe execution stages: data-table gate, assertIdempotent API (checkpoint)
Checkpoint before sweeping tests off expectedCyclesThatMakeChanges.

Scheduler / stages (rewrite-core):
- Flat stage worklist; a cycle is a stage, convergence is a self-edge sealed
  in the default Recipe.nextStage (re-emits the stage root). Single maxStages cap.
- ScanningRecipe finalizes nextStage(next, ctx) to route to the accumulator-aware
  nextStage(next, ctx, acc), mirroring getVisitor(); scheduler stays agnostic.
- Data tables write on the first stage of any lineage (firstStageInLineage) and
  are suppressed on self-edge re-runs, so any stage can emit and re-runs don't
  duplicate. RecipeRunStats/SourcesFileErrors write straight to the store instead
  of overriding the gate.
- RecipeRunCycle renamed to RecipeRunStage.

Test harness (rewrite-test):
- New RecipeSpec.assertIdempotent(boolean), default true, drives minStages=2 on
  the default path (no count to declare); the per-source assertions verify the
  result. Explicit expectedCyclesThatMakeChanges keeps the deprecated
  count-checking path.
- RewriteRunner.Context carries minStages.

Also relocated the maxStages-exceeded throw so it fires only on genuine
non-convergence (pending work at the cap), not on a normal final idempotency
stage; made the WriteThenReadRecipe test recipe converge.

rewrite-core, rewrite-xml, rewrite-yaml suites green. Next: sweep remaining
modules' tests off expectedCyclesThatMakeChanges.